[package]
name = "fifty-shades"
version = "0.2.0"
authors = ["Alexander Dorn <ad@sodosopa.io>"]
edition = "2018"
license = "Apache-2.0"
description = "Graylog REST API client written in Rust"
homepage = "https://github.com/e-user/50shades"
repository = "https://github.com/e-user/50shades"
readme = "README.md"
keywords = ["command-line", "cli", "graylog", "log"]
categories = ["command-line-utilities"]

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
keyring = "0.7.1"
structopt = "0.2.18"
failure = "0.1.5"
serde = { version = "1.0.98", features = ["derive"] }
toml = "0.5.3"
serde_json = "1.0"
url = "2.1.0"
chrono = { version = "0.4.1", features = ["serde"] }
exitfailure = "0.5.1"
dirs = "2.0.2"
two_timer = "1.2.0"
dialoguer = "0.4.0"
handlebars = "2.0.1"
maplit = "1.0.2"
tonic = { version = "0.4", features = ["tls"] }
gcp_auth = "0.4"
prost = "0.7"
prost-types = "0.7"
googapis = { version = "0.4", features = ["google-logging-v2"] }
tokio = { version = "1.5.0", features = ["full"] }

[build-dependencies]
tonic-build = { version = "0.4", features = ["prost"] }

[[bin]]
name = "50shades"
path = "src/main.rs"
